--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -43,13 +43,37 @@ body #root .container-description {
 }
 
 .description .title {
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 500;
   margin-bottom: 20px;
 }
 
 .description .text {
-  font-size: 12px;
+  font-size: 10px;
+}
+
+.description .text .list-title {
+  font-weight: 500;
+}
+
+.description .text .list {
+  margin-top: 2px;
+  margin-bottom: 12px;
+  padding-left: 0;
+  list-style-type: none;
+}
+
+.description .text li {
+  font-size: 8px;
+  margin-left: 0px;
+}
+
+.description .text a {
+  color: #000;
+}
+
+.description .text a:hover {
+  color: #858484;
 }
 
 .sign-title {
