--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -113,10 +113,11 @@ body #root .container-description {
 }
 
 .cell {
-  width: 40px;
-  height: 40px;
+  width: 35px;
+  height: 35px;
   overflow: hidden;
   background-color: #ffffff;
+  position: absolute;
 }
 
 .row {
@@ -126,15 +127,21 @@ body #root .container-description {
 }
 
 .grid {
-  background: #000;
   display: flex;
+  position: relative;
+  min-width: 100%;
+  min-height: 100vh;
+  align-items: center;
 }
 
 .container {
-  width: 100%;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  inset: 0;
+  background-color: burlywood;
 }
 
 /** Handle LEVA */
